syntax = "proto3";

package rivet.backend.pkg.cluster.msg.create;

import "proto/common.proto";

/// name = "msg-cluster-create"
/// parameters = [
/// 	{ name = "cluster_id" },
/// ]
message Message {
    rivet.common.Uuid cluster_id = 1;
    string name_id = 2;
    optional rivet.common.Uuid owner_team_id = 3;
}
